minor alignment fixes

--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ p {
   line-height: 1.45;
   font-weight: 300;
   text-align: left;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 header {
@@ -233,18 +233,11 @@ section {
 
 .about {
   grid-column: 2 / 12;
-}
-
-.about h2 {
   text-align: center;
 }
 
 .about p {
   text-align: justify;
-}
-
-.about a {
-  text-align: center;
 }
 
 /* contact section styling */
